--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
     <script src="./script.js" defer></script>
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <p class="date-one"></p>
+    <p class="date-two"></p>
+  </body>
 </html>
