--- a/index.html
+++ b/index.html
@@ -8,8 +8,5 @@
     <script src="./script.js" defer></script>
     <title>Document</title>
   </head>
-  <body>
-    <span></span>
-    <button>New color!</button>
-  </body>
+  <body></body>
 </html>
