--- a/index.html
+++ b/index.html
@@ -8,5 +8,13 @@
     <script src="./script.js" defer></script>
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <h2 class="hello-title">Привет, аноним!</h2>
+      <button class="register">Зарегистрироваться</button>
+      <button class="login">Авторизоваться</button>
+
+      <div class="dataUsers"></div>
+    </div>
+  </body>
 </html>
