Display the current day and time on the page in this format:
Good afternoon (morning, evening, night depending on the time of day)
Today: Monday
Current Time:12:05:15 PM
There are 175 days left until the new year

--- a/index.html
+++ b/index.html
@@ -9,12 +9,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="container">
-      <h2 class="hello-title">Привет, аноним!</h2>
-      <button class="register">Зарегистрироваться</button>
-      <button class="login">Авторизоваться</button>
-
-      <div class="dataUsers"></div>
+    <div class="result"></div>
     </div>
   </body>
 </html>
