the program should wait for the user input to complete and only then change the text in<p></p>

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="result"></div>
+    <div class="container">
+      <input type="text">
+    <p></p>
+    </div>
+    
     </div>
   </body>
 </html>
