--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="container">
-      <input type="text">
-    <p></p>
+    <div class="one">
+      <img src="./img/one.png" alt="one" class="one-img" width="100" height="100" />
     </div>
-    
+    <div class="two">
+      <img src="./img/two.png" alt="two" class="two-img" width="100" height="100" />
     </div>
   </body>
 </html>
